// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon component Should Exist 1`] = `[Function]`;

exports[`Icon component Should concat Bulma class with classes in props 1`] = `
<span
  className="other-class icon"
  icon="bars"
/>
`;

exports[`Icon component Should have box classname 1`] = `
<span
  className="icon"
  icon="bars"
/>
`;

exports[`Icon component Should render wrapped on icon-text class 1`] = `
<span
  className="icon-text"
>
  <span
    className="icon"
    icon="bars"
  />
</span>
`;
